--- a/css/base/_mixins.scss
+++ b/css/base/_mixins.scss
@@ -4,4 +4,8 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-  }
+}
+
+@function hue($color, $percentage) {
+  @return mix(white, $color, $percentage);
+}
