add mixed colors using a mixin

--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -5,6 +5,8 @@ $green-blue: #0A5FB5;
 $purplenavy: #585481;
 $pastelviolet: #C49BBB;
 $thistle: #D1BCE3;
+$majorelleblue: #623CEA;
+$forestgreen: #157F1F;
 
 // Grid Variables
 $grid-columns: 12;
